classDiagram
direction TB

%% ═══════════════════════════════════════════════════════════════
%%  INFRASTRUCTURE
%% ═══════════════════════════════════════════════════════════════

class Main {
    +main(args) void
}

class Router {
    -routes Map~String, RouteHandler~
    +register(path, handler) void
    +routeRequest(exchange) void
}

class HttpRequest {
    -exchange HttpExchange
    +getHeader(name) String
}

class HttpResponse {
    -exchange HttpExchange
    -body StringBuilder
    -contentType String
    +appendToBody(content) void
    +getBody() String
    +setContentType(type) void
    +send() void
}

%% ═══════════════════════════════════════════════════════════════
%%  TEMPLATE METHOD PATTERN — MVC Controller layer
%%  handle() is the invariant skeleton.
%%  createModel / buildView / handleRequest are subclass hot-spots.
%% ═══════════════════════════════════════════════════════════════

class RouteHandler {
    <<interface>>
    +handle(exchange) void
}

class BaseRouteHandler {
    <<abstract>>
    +handle(exchange) void
    #createModel() Subject*
    #buildView() Component*
    #handleRequest(request, model) void*
}

class HomeHandler {
    #createModel() Subject
    #buildView() Component
    #handleRequest(request, model) void
}

class UsersHandler {
    #createModel() Subject
    #buildView() Component
    #handleRequest(request, model) void
}

%% ═══════════════════════════════════════════════════════════════
%%  STRATEGY PATTERN — MVC View rendering layer
%%  Controller is the Context. ViewStrategy is the Strategy.
%% ═══════════════════════════════════════════════════════════════

class Controller {
    -viewStrategy ViewStrategy
    -response HttpResponse
    +setViewStrategy(strategy) void
    +renderView(view) void
}

class ViewStrategy {
    <<interface>>
    +renderLeaf(content, response) void
    +renderCompositeStart(component, response) void
    +renderCompositeEnd(component, response) void
}

class HTMLViewStrategy {
    +renderLeaf(content, response) void
    +renderCompositeStart(component, response) void
    +renderCompositeEnd(component, response) void
}

class JSONViewStrategy {
    +renderLeaf(content, response) void
    +renderCompositeStart(component, response) void
    +renderCompositeEnd(component, response) void
}

%% ═══════════════════════════════════════════════════════════════
%%  COMPOSITE PATTERN — MVC View structure
%%  Composite branches; Leaf terminates.
%%  Both delegate rendering to the chosen ViewStrategy.
%% ═══════════════════════════════════════════════════════════════

class Component {
    <<interface>>
    +getName() String
    +setName(name) void
    +add(component) void
    +remove(component) void
    +render(strategy, response) void
}

class Composite {
    -children List~Component~
    -name String
    +add(component) void
    +remove(component) void
    +render(strategy, response) void
    +getName() String
    +setName(name) void
}

class Leaf {
    -content String
    +add(component) void
    +remove(component) void
    +render(strategy, response) void
    +getName() String
    +setName(name) void
}

%% ═══════════════════════════════════════════════════════════════
%%  OBSERVER PATTERN — MVC Model-View bridge
%%  Subject is the Model. ConcreteObserver listens, then re-renders.
%% ═══════════════════════════════════════════════════════════════

class Subject {
    <<interface>>
    +register(observer) void
    +unregister(observer) void
    +notifyObservers() void
    +getState() Object
    +setState(state) void
}

class ConcreteSubject {
    -observers List~Observer~
    -state Object
    +register(observer) void
    +unregister(observer) void
    +notifyObservers() void
    +getState() Object
    +setState(state) void
}

class Observer {
    <<interface>>
    +update() void
    +setSubject(subject) void
}

class ConcreteObserver {
    -subject Subject
    -viewRoot Component
    -controller Controller
    +update() void
    +setSubject(subject) void
    -renderView() void
}

%% ═══════════════════════════════════════════════════════════════
%%  MVC FLOW  (numbered 1–12, follows one HTTP request)
%% ═══════════════════════════════════════════════════════════════

Main --> Router       : "1. registers routes"
Router --> RouteHandler : "2. dispatches by path"

RouteHandler <|.. BaseRouteHandler
BaseRouteHandler <|-- HomeHandler
BaseRouteHandler <|-- UsersHandler

BaseRouteHandler --> HttpRequest      : "3. wraps exchange"
BaseRouteHandler --> HttpResponse     : "3. wraps exchange"
BaseRouteHandler --> Controller       : "4. creates Strategy context"
BaseRouteHandler ..> Subject          : "5. createModel — MVC Model"
BaseRouteHandler ..> Component        : "6. buildView — MVC View"
BaseRouteHandler --> ConcreteObserver : "7. wires Observer to Model"

ViewStrategy <|.. HTMLViewStrategy
ViewStrategy <|.. JSONViewStrategy
Controller --> ViewStrategy : "holds chosen strategy"
Controller --> Component    : "11. delegates render"
ViewStrategy ..> HttpResponse : "12. appends formatted output"

Component <|.. Composite
Component <|.. Leaf
Composite *-- Component : "has children"

Subject <|.. ConcreteSubject
Observer <|.. ConcreteObserver
ConcreteSubject --> Observer  : "8. notifyObservers"
ConcreteObserver --> Component  : "9. adds dynamic view nodes"
ConcreteObserver --> Controller : "10. calls renderView"

%% ═══════════════════════════════════════════════════════════════
%%  PER-CLASS STYLE DIRECTIVES (Mermaid v10+ compatible)
%%    gray   = infrastructure
%%    green  = Template Method
%%    blue   = Strategy
%%    pink   = Composite
%%    yellow = Observer
%% ═══════════════════════════════════════════════════════════════

style Main         fill:#f3f4f6,stroke:#6b7280,color:#1f2937
style Router       fill:#f3f4f6,stroke:#6b7280,color:#1f2937
style HttpRequest  fill:#f3f4f6,stroke:#6b7280,color:#1f2937
style HttpResponse fill:#f3f4f6,stroke:#6b7280,color:#1f2937

style RouteHandler     fill:#d1fae5,stroke:#065f46,color:#022c22
style BaseRouteHandler fill:#d1fae5,stroke:#065f46,color:#022c22
style HomeHandler      fill:#d1fae5,stroke:#065f46,color:#022c22
style UsersHandler     fill:#d1fae5,stroke:#065f46,color:#022c22

style Controller       fill:#dbeafe,stroke:#1d4ed8,color:#1e3a5f
style ViewStrategy     fill:#dbeafe,stroke:#1d4ed8,color:#1e3a5f
style HTMLViewStrategy fill:#dbeafe,stroke:#1d4ed8,color:#1e3a5f
style JSONViewStrategy fill:#dbeafe,stroke:#1d4ed8,color:#1e3a5f

style Component fill:#fce7f3,stroke:#be185d,color:#500724
style Composite fill:#fce7f3,stroke:#be185d,color:#500724
style Leaf      fill:#fce7f3,stroke:#be185d,color:#500724

style Subject          fill:#fef9c3,stroke:#a16207,color:#422006
style ConcreteSubject  fill:#fef9c3,stroke:#a16207,color:#422006
style Observer         fill:#fef9c3,stroke:#a16207,color:#422006
style ConcreteObserver fill:#fef9c3,stroke:#a16207,color:#422006
